--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,14 @@ a {
   text-decoration: none;
 }
 
+li {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+}
+
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -108,7 +116,7 @@ a {
 }
 
 .nav-itens a {
-  color: rgba(51, 51, 51, 0.6);
+  color: rgba(51, 51, 51, 0.5);
   font-size: 0.82rem;
   font-family: Arial, Helvetica, sans-serif;
   margin-right: 16px;
@@ -117,11 +125,11 @@ a {
 
 .nav-endereco {
   color: #333;
-  font-size: 0.9rem;
+  font-size: 0.85rem;
   font-family: Arial, Helvetica, sans-serif;
+  letter-spacing: 0.11mm;
 }
 
-.main-banner {
+.glider-contain {
   max-width: 1600px;
-  margin: 0 auto;
 }
