--- a/style/nav.css
+++ b/style/nav.css
@@ -24,9 +24,15 @@
   margin-top: 4px;
 }
 
-.nav-logo img {
+.nav-logo div {
   margin-top: 3px;
   margin-right: 6px;
+  width: 134px;
+  height: 34px;
+  background-image: url('../assets/icons/logo.png');
+  overflow: hidden;
+  display: flex;
+  position: static;
 }
 
 .nav-header-disney {
