Finalização elementos HTML

--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,6 @@
 @import './desconto.css';
 @import './produtos/comprarAgora.css';
 @import './banner.css';
+@import './app.css';
+@import './faq.css';
+@import './footer.css';
