--- a/style/banner.css
+++ b/style/banner.css
@@ -17,3 +17,17 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
 }
+
+.banner {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.banner:hover {
+  cursor: pointer;
+  box-shadow: 2px 2px 12px 2px rgba(0, 0, 0, 0.12);
+}
+
+.banner-duplo img {
+  margin: 5px;
+}
