--- a/style/nav.css
+++ b/style/nav.css
@@ -114,19 +114,23 @@
 }
 
 @media (max-width: 1000px) {
+  .nav-header {
+    height: 94px;
+  }
   .nav-grid {
     padding: 0px;
     grid-template-columns: max-content 1fr max-content max-content;
     column-gap: 8px;
-    grid-template-rows: 48px 28px;
+    grid-template-rows: 40px 28px;
+    align-items: center;
   }
   .nav-logo div {
-    width: 54px;
-    margin-left: 1rem;
+    width: 49px;
+    margin-left: 0.5rem;
   }
   .nav-input-search,
   .nav-btn-search {
-    margin: 7px 0;
+    margin: 7px 0 0 0;
     height: 34px;
   }
   .nav-header form {
@@ -135,5 +139,18 @@
   .nav-btn-search::before {
     content: '';
     height: 0px;
+  }
+  .nav-endereco {
+    display: flex;
+    align-items: center;
+    grid-column: 1/ -1;
+    padding-top: 0.75rem;
+    border-top: 1px solid rgba(51, 51, 51, 0.2);
+    font-size: 0.7rem;
+    padding-left: 0.5rem;
+  }
+
+  .nav-carrinho {
+    padding-left: 8px;
   }
 }
