--- a/style/produtos/comprarAgora.css
+++ b/style/produtos/comprarAgora.css
@@ -102,4 +102,13 @@
   .comprar-grid {
     grid-template-columns: 1fr 1fr;
   }
+  .comprar-price {
+    font-size: 20px;
+  }
+  .comprar-price sup {
+    font-size: 8px;
+  }
+  .comprar-desconto {
+    padding-left: 8px;
+  }
 }
